# FFMusic

./: CMakeLists.txt  Main.qml  PlayLogic.qml  README.md  Volume.qml  getalbumimg.cpp  getalbumimg.h  main.cpp  readdata.cpp  readdata.h  src.qrc
